# sarcoseg

./: .gitignore  database.py  filter_series.py  l3smi.py  labkeyd.py  main.py  postproc.py  preprocess.py  pyproject.toml  requirements.txt  sarcoseg-aio.py  sarcoseg-extract.py  sarcoseg.py  segment.py  setup_project.py  surface.py  tissue_area.py  update_labkey_from_pacs.py
src/: classes.py  database.py  labels.py  models.py  preprocessing.py  segmentation.py  setup_project.py  slogger.py  utils.py  visualization.py
src/network/: database.py  pacs.py
tests/: nnunetv2-inf.py  test_network.py  test_preprocessing.py  test_segmentation.py
