[project]
name = "fnosarcoseg"
authors = [{ name = "Vojtěch Benda", email = "vojtech.benda@fno.cz" }]
version = "0.1.0"
description = "desc"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "TotalSegmentator>=2.10.0",
    "nnunet>=1.7.1",
    "nnunetv2>=2.6.2",
    "pydicom>=3.0.1",
    "dicom2nifti>=2.6.2",
    "blosc2>=3.7.0",
    "pandas>=2.3.1",
    "huggingface-hub>=0.34.4",
    "matplotlib>=3.10.5",
    "scikit-image>=0.25.1",
    "labkey>=3.4.0",
    "simpleitk>=2.5.3",
    "dcm2niix>=1.0.20250506",
    "dotenv>=0.9.9",
    "pynetdicom>=3.0.4",
]
