[project]
name = "fnosarcoseg"
authors = [{ name = "Vojtěch Benda", email = "vojtech.benda@fno.cz" }]
version = "0.1.0"
description = "desc"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "TotalSegmentator>=2.10.0",
    "nnunetv2>=2.6.2",
    "pydicom>=3.0.1",
    "blosc2>=3.7.0",
    "pandas>=2.3.1",
    "huggingface-hub>=0.34.4",
    "matplotlib>=3.10.5",
    "labkey>=3.4.0",
    "simpleitk>=2.5.3",
    "pynetdicom>=3.0.4",
    "coloredlogs>=15.0.1",
]

testpaths = ["tests"]

[dependency-groups]
dev = [
    "polars>=1.40.1",
    "pytest>=9.0.2",
    "xlsxwriter>=3.2.9",
]
